# Flask-CSV-to-chart

./: .gitignore  main.py  pyproject.toml
chartgen/: __init__.py  build_chart.py  parse_csv.py
utils/: __init__.py  unique_file_validator.py
