[tool.poetry]
name = "flask-csv-to-chart"
version = "0.1.0"
description = "Generate charts based on CSV data"
authors = ["SvenMC <svencooke7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
flake8 = "^6.1.0"
matplotlib = "^3.7.2"
mplcyberpunk = "^0.7.0"
pandas = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
